전체 소음 로그 조회 API